# SSFR

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  PRIOR_ART_CHECKLIST.md  README.md  RESEARCH_NOTE.md  TESTING_GUIDE_RO.md  cauta.cmd  cauta_1m.cmd  construieste_index_1m.cmd  construieste_index_1m_rapid.cmd  instaleaza_semantic.cmd  pyproject.toml  requirements.txt
benchmarks/: benchmark_csv_catalog.py  benchmark_dynamic_updates.py  benchmark_large_router.py  benchmark_memory.py  benchmark_recall.py  benchmark_scale.py  compare_baselines.py  estimate_billion_scale.py
configs/: benchmark.yaml  billion_scale_estimate.yaml  development.yaml
data/: README.md  products.csv  search_queries.csv
demos/: __init__.py  api_demo.py  csv_ecommerce_search.py  ecommerce_demo.py  interactive_search.py  synthetic_demo.py
reports/billion_scale_estimate/: estimate.json  estimate.md
reports/csv_benchmark/: benchmark_report.json  benchmark_report.md
reports/large_router/: benchmark.json
reports/large_router_threads12/: benchmark.json
reports/synthetic/: benchmark_report.json  benchmark_report.md
src/ssfr/: __init__.py  baselines.py  benchmarking.py  calibration.py  capacity.py  catalog.py  certificates.py  cli.py  config.py  (+15 more)
tests/: conftest.py  test_api.py  test_calibration.py  test_capacity.py  test_certificates.py  test_csv_catalog.py  test_embeddings.py  test_end_to_end.py  test_interactive.py  test_large_catalog_generator.py  test_local_index.py  test_ordering.py  test_persistence.py  test_router.py  test_spectral.py
tools/: __init__.py  generate_million_products.py
