[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssfr"
version = "0.2.0"
description = "SpectraShard Fourier Router for experimental distributed vector search"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "SSFR contributors"}]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "psutil>=6.0",
  "threadpoolctl>=3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "matplotlib>=3.9",
]
api = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
]
ann = [
  "hnswlib>=0.8",
]
parquet = [
  "pyarrow>=17",
]
embeddings = [
  "sentence-transformers>=3.0",
]

[project.scripts]
ssfr = "ssfr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ssfr"]

[tool.ruff]
line-length = 100
target-version = "py312"
